# rocm_test

Embedding/: emb  embedding.cpp  model_index.json  weight.cpp
Flash_attention/: 2_flash.cpp  att  att_2  flash.cpp  flash.h  test.cpp
Flash_attention_2/: att  att2  att3  flash.cpp  flash.h  flash_mask.cpp  flash_tiled.cpp  flash_tiled.h  input.txt  output.csv  results.copy_stats.csv  results.db  results.hip_stats.csv  results.json  results.stats.csv  test_flash.cpp  test_flash_mask.cpp  test_flash_tiled.cpp
Flash_attention_2/pmc_1/: pmc.txt  results_output.csv.csv
Flash_attention_3/: flash_attentiom.cpp  mma  mma_mm.cpp  test
Flash_encoding/: flash_attention_test  flash_encoding.cpp  flash_encoding.h  flash_mask.cpp  flash_mask.h  makefile  test  test_flash_encoding.cpp  test_flash_mask.cpp
Garbge_can/: load.cpp  load.h  moe_infer.cpp  moe_infer.h  tokenizer.cpp
Graph/: 4078451_output.pftrace  4078537_output.pftrace  4081543_output.pftrace  4088533_output.pftrace  4090493_output.pftrace  graph_from_stream.cpp  hcc_ops_trace_test.json.csv  hip_api_trace_test.json.csv  hsa_api_trace_test.json.csv  no  no_graph.cpp  results.copy_stats.csv  results.csv  results.db  results.hsa_stats.csv  results.json  results.stats.csv  results.sysinfo.txt  test
Linear/: copy  lin  linear.cpp  results.copy_stats.csv  results.db  results.hip_stats.csv  results.json  results.stats.csv  results.sysinfo.txt  test.cpp  weight_loader.cpp
Llama3/: model.cpp  model.h
Llama3/tokenizer/: Makefile  lib.rs  tokenizer_test
Matrix_Multiplication/: -m  m  matrix_multiplication.cpp  results.copy_stats.csv  results.db  results.hip_stats.csv  results.json  results.stats.csv
MoE/: MOE.cpp  Makefile  SiLU.cpp  SiLU.h  dot  dot_product.cpp  dot_product.h  expert.cpp  expert.h  gate  gating_network.cpp  gating_network.h  infer  lin  linear.cpp  linear.h  router  router.cpp  router.h  setup.ipynb  softmax  softmax.cpp  softmax.h  test_softmax.cpp
RMS_norm/1/: RMSnorm.cpp  RMSnorm.h  gpu_rms  results.db  results.hip_stats.csv  results.json  results.stats.csv  rms_norm_gpu.cpp
RMS_norm/2/: rms_norm_cpu.cpp  rms_norm_gpu_2.cpp
RoPE/: freq  freq.cpp  rope  rope.cpp  rope.h  test.cpp
SiLU/: CMakeLists.txt  README.md  SiLU.cpp  SiLU.h  build_and_run.sh  s  test_silu.cpp
Tokenizer/: load  load.cpp  load.h  tokenizer.cpp
Tokenizer/api/: CMakeLists.txt  Cargo.toml  README.md  core.cpp  cpp.rs  example.cpp  tokenizer.cpp  tokenizer.h
Unified_memory/: results.db  results.hip_stats.csv  results.json  results.stats.csv  un  unify.cpp
Weight_load/f_all/: all  embedding_all.cpp  input.txt  results.db  results.hip_stats.csv  results.json  results.stats.csv  weight_loader_all.h
Weight_load/f_emb/: emb  embedding.cpp  results.db  results.hip_stats.csv  results.json  results.stats.csv  test.cpp  weight_loader.cpp  weight_loader.h  wload
Weight_load/memcpy/: weight_loader_mencpy.cpp
fp8-mm/: custom_kernel.ipynb  fp8.cpp  fp8_mm_test  m3  m3.cpp  makefile  mf  mf.cpp  mm  mm.cpp  test
fp8-mm/V1/: fp8  fp8.cpp  fp8_mm.py  makefile  optimization.txt
fp8-mm/V2/: fp8.cpp
path=MoE/: MOE.cpp
test_/: dim  dim.cpp  results.copy_stats.csv  results.db  results.hip_stats.csv  results.json  results.stats.csv  results.sysinfo.txt  test  test.cpp
