[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer"
path = "lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
fancy-regex = "0.11.0"
rustc-hash = "1.1.0"
bstr = "1.6.0"

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
optional = true

[features]
default = []
python = ["pyo3"]
cpp = [] 